# MedtechHackathon25

./: .gitignore  README.md  ValerioTester.py  app.py  login.py  pyproject.toml  sign_up.py
databases/: database.py  medtech.db  mood.csv
medtech_hackathon25/: __init__.py
medtech_hackathon25/ml/: __init__.py  ollama_client.py
medtech_hackathon25/ml/vision/: emotion_recognition.py
medtech_hackathon25/vision/: emotion_recognition.py
pages/: Activity Tracker.py  Tasks.py  Video Check Up.py  chat.py  chatPage.py  form.py  formView.py  gps.py  home.py  homePage.py  mood.py  scan.py  sign_up.py  signup.py
