[project]
name = "medtech-hackathon25"
version = "0.1.0"
description = "Streamlit ML app"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "streamlit>=1.37",
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "opencv-python>=4.10",
  "streamlit-webrtc >= 0.63.11",
  "torch>=2.2,<2.4",
  "torchvision>=0.17,<0.18",
  "facenet-pytorch>=2.6",
  "transformers>=4.44",
  "safetensors>=0.4",
  "plotly>=6.4.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "black>=24.4",
  "ruff>=0.4",
]

ml-torch = [
  "torch>=2.2,<2.4",
  "torchvision>=0.17,<0.18",
  "facenet-pytorch>=2.6",
  "opencv-python>=4.10",
  "transformers>=4.44",
  "safetensors>=0.4",
]

ml-tf = [
  "tensorflow>=2.15",
]

llm-ollama = [
  "ollama>=0.2.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["."]
include = ["medtech_hackathon25"]
